# 2048-c

./: .gitignore  CMakeLists.txt  README.md  main.c
